[package]
name = "merkle"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
digest = "0.11.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
sha2 = "0.11.0"

[[bench]]
name = "merkle"
harness = false
